# NovaNote

./: .gitignore  README.md  package.json  pnpm-lock.yaml
.github/workflows/: deploy-pages.yml
apps/desktop/: package.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/desktop/public/: bridge.js  plugin-frame.html
apps/desktop/public/plugins/hello-panel/: main.js
apps/desktop/src/: App.tsx  editorState.ts  index.css  main.tsx  pluginBridge.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/components/: AppSidebar.tsx  CommandPalette.tsx  NotesList.tsx
apps/desktop/src/layouts/: AppShell.tsx
apps/desktop/src/pages/: Editor.tsx  Home.tsx  Onboarding.tsx  Settings.tsx
apps/ipad/: README.md  design-notes.md  tokens.generated.json
apps/web/: copy-registry.js  index.html  package.json  tailwind.config.js  tsconfig.node.json  vite.config.ts
apps/web/src/: App.tsx  index.css  main.tsx
apps/web/src/pages/: Docs.tsx  Download.tsx  Home.tsx  OpenSource.tsx  PluginDetail.tsx  Plugins.tsx  ThemeDetail.tsx  Themes.tsx
core/ai/: README.md  ollama.ts  service.ts
core/editor/: state.ts
core/plugins/: bridge.ts  loader.ts  types.ts
core/plugins/examples/hello-panel/: plugin.json
core/storage/: index.ts
registry/: plugins.json  themes.json
