[package]
name = "novanote-desktop"
version = "0.0.1"
description = "NovaNote desktop app"
authors = ["NovaNote"]
edition = "2021"

[lib]
name = "novanote_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
